--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </section>
 
         <!-- Comienza formulario -->
-        <section id="s1" style="display: none;">
+        <section id="s1" class="sec_preguntas" style="display: none;">
             <h2>Sección 1</h2>
             <p>Assigna un número del 1 al 10 en cada afirmación según tu identificación con la misma. La suma de todas las puntuaciones debe ser igual a 10</p>
             <h3>Cómo creo que puedo contribuir al grupo?</h3>
@@ -44,7 +44,7 @@
                 <input type="number" placeholder="" name="p12" id="p12" value="0" min="0" max="10">
             </div >
             <div class="flex_row">
-                <label for="p13">Tener ideas es una de mis cualidades innatas</label>
+                <label for="p13">Tengo habilidad para hacer hablar a las personas y hacer que se expresen cuando detecto que pueden aportar algo de valor a los objetivos del grupo.</label>
                 <input type="number" placeholder="" name="p13" id="p13" value="0" min="0" max="10">
             </div>
             <div class="flex_row">
@@ -64,6 +64,48 @@
                 <input type="number" placeholder="Respuesta" name="p16" id="p17" value="0" min="0" max="10">
             </div>
             <button type="button" onclick="resultado1()" class="boton_siguiente">Siguiente</button>
+        </section>
+
+
+
+
+        <section class="sec_preguntas" id="s2" style="display: none;">
+            <h2>Sección 2</h2>
+            <p>Assigna un número del 1 al 10 en cada afirmación según tu identificación con la misma. La suma de todas las puntuaciones debe ser igual a 10</p>
+            <h3>Si tengo algún defecto en el trabajo en equipo puede ser:</h3>
+            <div class="flex_row">
+                <label for="p10">A no ser que las reuniones estén claramente estructuradas, bien controladas y en general dirigidas eficazmente, no me siento tranquilo.</label>
+                <input type="number" placeholder="" name="p20" id="p20" value="0" min="0" max="10">
+            </div>
+            <div class="flex_row">
+                <label for="p11">Tiendo a ser demasiado generoso con aquellos que tienen un punto de vista válido que no ha sido escuchado/publicado debidamente.</label>
+                <input type="number" placeholder="" name="p21" id="p21" value="0" min="0" max="10">
+            </div>
+            <div class="flex_row">
+                <label for="p12">Tiendo a hablar demasiado una vez que el grupo pasa a un tema nuevo</label>
+                <input type="number" placeholder="" name="p22" id="p22" value="0" min="0" max="10">
+            </div >
+            <div class="flex_row">
+                <label for="p13">Mi objetivo y punto de vista racional hace que me sea difícil unirme fácilmente y con entusiasmo a los compañeros.</label>
+                <input type="number" placeholder="" name="p23" id="p23" value="0" min="0" max="10">
+            </div>
+            <div class="flex_row">
+                <label for="p14">A veces me ven como una persona enérgica y autoritaria cuando tengo que tratar temas importantes que quieren una acción.</label>
+                <input type="number" placeholder="" name="p24" id="p24" value="0" min="0" max="10">
+            </div class="flex_row">
+            <div class="flex_row">
+                <label for="p15">Me resulta difícil dirigir “de frente”, quizás porque soy demasiado sensible y susceptible al clima del grupo.</label>
+                <input type="number" placeholder="" name="p25" id="p25" value="0" min="0" max="10">
+            </div>
+            <div class="flex_row">
+                <label for="p16">Soy propenso a involucrarme demasiado y a “enredarme” en ideas que se me ocurren. Por ello, tiendo a perder el hilo de otras cosas que están ocurriendo en el grupo.</label>
+                <input type="number" placeholder="" name="p26" id="p26" value="0" min="0" max="10">
+            </div>
+            <div class="flex_row">
+                <label for="p17">Tiendo a preocuparme demasiado por los detalles y por la posibilidad de que las cosas no vayan bien debido a una planificación insuficiente.</label>
+                <input type="number" placeholder="Respuesta" name="p27" id="p27" value="0" min="0" max="10">
+            </div>
+            <button type="button" onclick="resultado2()" class="boton_siguiente">Siguiente</button>
         </section>
 
 
