Resolver error codigo funcion final

--- a/index.html
+++ b/index.html
@@ -416,6 +416,7 @@
                             <li>Galvaniza a los demás en la acción</li>
                         </ul>
                 </div>
+                <button>Mostrar todos los roles</button>
             </div>
             <div>
                 <div id="contenedor_grafico">
