--- a/index.html
+++ b/index.html
@@ -267,35 +267,35 @@
 
             <h3>Si de repente me dan una tarea difícil a realizar en un tiempo límite y con gente que no concozco...</h3>
             <div class="flex_row">
-                <label for="p10">Prefiero idear una solución por mi cuenta y después intentar “vendérsela” al grupo</label>
+                <label for="p10">Soy propenso a demostrar mi impaciencia hacia aquellos que están obstaculizando o retrasando la marcha del trabajo./label>
                 <input type="number" placeholder="" name="p70" id="p70" value="0" min="0" max="10">
             </div>
             <div class="flex_row">
-                <label for="p11">Estoy dispuesta a trabajar con la persona que muestre el enfoque más prometedor de cara al problema, a pesar de lo difícil que resulte trabajar con ella.</label>
+                <label for="p11">A veces los demás consideran y critican que soy demasiado analítico y poco intuitivo.</label>
                 <input type="number" placeholder="" name="p71" id="p71" value="0" min="0" max="10">
             </div>
             <div class="flex_row">
-                <label for="p12">Encontraría la manera de reducir el tamaño de la tarea a uno que fuera más manejable estableciendo cómo y en qué podrían contribuir distintas personas</label>
+                <label for="p12">Mi deseo de comprobar los detalles para asegurar que el trabajo está bien hecho a veces puede interrumpir/retrasar los procedimientos del grupo</label>
                 <input type="number" placeholder="" name="p72" id="p72" value="0" min="0" max="10">
             </div >
             <div class="flex_row">
-                <label for="p13">Mi sentido natural para fijar prioridades y saber lo que es urgente asegura el que casi nunca nos retrasemos.</label>
+                <label for="p13">Tiendo a mostrar el aburrimiento a no ser que tome parte de forma activa y trabaje con personas interesantes.</label>
                 <input type="number" placeholder="" name="p73" id="p73" value="0" min="0" max="10">
             </div>
             <div class="flex_row">
-                <label for="p14">Normalmente mantengo la “serenidad” y la capacidad de pensar objetivamente y con claridad.</label>
+                <label for="p14">Me resulta difícil empezar un trabajo a no ser que no estén claros los objetivos.</label>
                 <input type="number" placeholder="" name="p74" id="p74" value="0" min="0" max="10">
             </div class="flex_row">
             <div class="flex_row">
-                <label for="p15">A pesar de las presiones y las dificultades, sigo adelante normalmente con lo que haya que hacer.</label>
+                <label for="p15">A veces tengo poca habilidad y no sirvo para explicar y clarificar ideas complejas a los demás.</label>
                 <input type="number" placeholder="" name="p75" id="p75" value="0" min="0" max="10">
             </div>
             <div class="flex_row">
-                <label for="p16">Si creyera que el grupo no está realizando progresos, tomaría algunas iniciativas y lo dirigiría de forma enérgica</label>
+                <label for="p16">Soy consciente de que exijo a los demás las cosas que yo no puedo hacer.</label>
                 <input type="number" placeholder="" name="p76" id="p76" value="0" min="0" max="10">
             </div>
             <div class="flex_row">
-                <label for="p17">Planteo discusiones con la intención de estimular nuevas ideas, fijar nuevas direcciones y poner al grupo en marcha.</label>
+                <label for="p17">Dudo a la hora de expresar mis opiniones personales y puntos de vista cuando me encuentro en auténtica minoría.</label>
                 <input type="number" placeholder="Respuesta" name="p77" id="p77" value="0" min="0" max="10">
             </div>
             <button type="button" onclick="resultado7()" class="boton_siguiente">Siguiente</button>
