retirar modificacion anterior

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             <button type="button" onclick="resultado7()" class="boton_siguiente">Siguiente</button>
         </section>
         <!-- Pantalla resultado -->
-        <section id="s_rec" style="display:;">
+        <section id="s_rec" style="display:none;">
             <h2>Resultado:</h2>
             <div id="cuadro_resultado">
                 <!-- descripciones -->
