--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
             <h3>Si de repente me dan una tarea difícil a realizar en un tiempo límite y con gente que no concozco...</h3>
             <div class="flex_row">
-                <label for="p10">Soy propenso a demostrar mi impaciencia hacia aquellos que están obstaculizando o retrasando la marcha del trabajo./label>
+                <label for="p10">Soy propenso a demostrar mi impaciencia hacia aquellos que están obstaculizando o retrasando la marcha del trabajo.</label>
                 <input type="number" placeholder="" name="p70" id="p70" value="0" min="0" max="10">
             </div>
             <div class="flex_row">
@@ -424,7 +424,7 @@
             <div>
                 <div id="contenedor_grafico">
                     <canvas id="grafico"></canvas>
-                    <script src="grafico.js"></script>
+                    <!-- <script src="grafico.js"></script> -->
                 </div>
             </div>
         </section>
