Arreglar s7 y gráfico resultado

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Test de Belbin</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
 </head>
+
 <body>
     <header>
         <h1>
@@ -260,7 +260,6 @@
             <button type="button" onclick="resultado6()" class="boton_siguiente">Siguiente</button>
         </section>
 
-
         <section class="sec_preguntas" id="s7" style="display: none;">
             <h2>Sección 7</h2>
             <p>Assigna un número del 1 al 10 en cada afirmación según tu identificación con la misma. La suma de todas las puntuaciones debe ser igual a 10</p>
@@ -424,11 +423,12 @@
             <div>
                 <div id="contenedor_grafico">
                     <canvas id="grafico"></canvas>
-                    <!-- <script src="grafico.js"></script> -->
                 </div>
             </div>
         </section>
     </main>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
+    <script src="grafico.js"></script>
 </body>
 </html>
+
